<resources>
    <string name="app_name">JasChates</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friend_name">친구 이름</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_maintain">로그인 유지</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="opponent_name">상대 이름</string>
    <string name="name">Name</string>
    <string name="name_input">이름:</string>
    <string name="chatroom_name">채팅방 이름</string>
    <string name="produce">생성</string>
    <string name="cancellation">취소</string>
    <string name="friend">친구</string>
    <string name="open_chatroom">열린 채팅방</string>
    <string name="textview">TextView</string>
    <string name="change">Change</string>
    <string name="logout">Logout</string>
    <string name="last_message">마지막 메세지</string>
    <string name="name_kor">이름</string>
    <string name="email_kor">이메일</string>
    <string name="message">메세지</string>
    <string name="time">시간</string>
    <string name="chat">채팅</string>

    // 욕설 필터링
    <string-array name="profanity">
        <item>개새끼</item>
        <item>개자식</item>
        <item>개 좆같다</item>
        <item>개 버러지</item>
        <item>개 좆버러지</item>
        <item>고아년</item>
        <item>고아새끼</item>
        <item>개 병신</item>
        <item>간나</item>
        <item>간나새끼</item>
        <item>개간나</item>
        <item>개년</item>
        <item>개돼지</item>
        <item>개쓰레기</item>
        <item>개씨발</item>
        <item>개지랄</item>
        <item>거지새끼</item>
        <item>걸레</item>
        <item>게이</item>
        <item>고자</item>
        <item>그지깽깽이</item>
        <item>근첩</item>
        <item>김치녀</item>
        <item>깜둥이</item>
        <item>꼴통</item>
        <item>꺼져</item>
        <item>꼬붕</item>
        <item>기생수</item>
        <item>강간</item>
        <item>김은정</item>
        <item>남창</item>
        <item>느금마</item>
        <item>니애미</item>
        <item>니엄마</item>
        <item>니모친</item>
        <item>ㄴ7ㅁ</item>
        <item>니애비</item>
        <item>니아빠</item>
        <item>느개비</item>
        <item>너검엄빠</item>
        <item>니거</item>
        <item>니기미</item>
        <item>나가죽어</item>
        <item>나가뒤져</item>
        <item>눈깔아</item>
        <item>니미럴</item>
        <item>노무현</item>
        <item>닥쳐</item>
        <item>등신</item>
        <item>돌아이</item>
        <item>도라이</item>
        <item>또라이</item>
        <item>뒤져</item>
        <item>등신</item>
        <item>따까리</item>
        <item>딸딸이</item>
        <item>땡중</item>
        <item>땡추</item>
        <item>똘추</item>
        <item>떨거지</item>
        <item>똘마니</item>
        <item>따먹다</item>
        <item>따먹는다</item>
        <item>렉카충</item>
        <item>로리콘</item>
        <item>루저</item>
        <item>러지</item>
        <item>맘충</item>
        <item>머저리</item>
        <item>무뇌</item>
        <item>버러지</item>
        <item>반푼이</item>
        <item>바보</item>
        <item>변태새끼</item>
        <item>병신</item>
        <item>븅딱</item>
        <item>뻐큐</item>
        <item>빨갱이</item>
        <item>ㅂㅅ</item>
        <item>빠가</item>
        <item>빌어먹을</item>
        <item>부모 홀수인 새끼</item>
        <item>불한당</item>
        <item>보지</item>
        <item>불알</item>
        <item>부랄</item>
        <item>붐따</item>
        <item>빨통</item>
        <item>부엉이바위</item>
        <item>사이버렉카</item>
        <item>사이코</item>
        <item>수전노</item>
        <item>십장생</item>
        <item>싸가지</item>
        <item>쌍놈</item>
        <item>쌍욕</item>
        <item>썅</item>
        <item>썩을</item>
        <item>씨발</item>
        <item>시발</item>
        <item>씨부레</item>
        <item>시부레</item>
        <item>씨벌</item>
        <item>씹</item>
        <item>아가리</item>
        <item>아다</item>
        <item>애비</item>
        <item>애미</item>
        <item>애비충</item>
        <item>애새끼</item>
        <item>애장</item>
        <item>역겹다</item>
        <item>얼간이</item>
        <item>엿</item>
        <item>영계</item>
        <item>엠창</item>
        <item>열폭</item>
        <item>염병</item>
        <item>옘병</item>
        <item>왕따</item>
        <item>운지</item>
        <item>육변기</item>
        <item>일베충</item>
        <item>응디시티</item>
        <item>은정</item>
        <item>은X</item>
        <item>자지</item>
        <item>장애인</item>
        <item>장@ㅐ인</item>
        <item>재수</item>
        <item>저능아</item>
        <item>정신병자</item>
        <item>젖</item>
        <item>자살</item>
        <item>제기랄</item>
        <item>지랄</item>
        <item>ㅈㄹ</item>
        <item>좆</item>
        <item>쥐새끼</item>
        <item>짱개</item>
        <item>짱깨</item>
        <item>짜져있어</item>
        <item>쪼다</item>
        <item>쩌리</item>
        <item>지루</item>
        <item>조루</item>
        <item>쫄보</item>
        <item>쪽바리</item>
        <item>찐따</item>
        <item>찌질이</item>
        <item>중력절</item>
        <item>조져</item>
        <item>존나</item>
        <item>ㅈㄴ</item>
        <item>정X</item>
        <item>창남</item>
        <item>창녀</item>
        <item>창났다</item>
        <item>추남</item>
        <item>추녀</item>
        <item>트롤</item>
        <item>틀딱</item>
        <item>틀니</item>
        <item>폐급</item>
        <item>폐녀자</item>
        <item>폐인</item>
        <item>피싸개</item>
        <item>퍽유</item>
        <item>퍼킹</item>
        <item>한남</item>
        <item>한녀</item>
        <item>허접</item>
        <item>호구</item>
        <item>흑우</item>
        <item>후레자식</item>
        <item>호모</item>
        <item>후빨</item>
        <item>fuck</item>
        <item>fucking</item>
        <item>fuck up</item>
        <item>what the fuck</item>
        <item>shut the fuck up</item>
        <item>shit</item>
        <item>holyshit</item>
        <item>ass</item>
        <item>ass hole</item>
        <item>shitty ass</item>
        <item>yellow monkey</item>
        <item>small dick</item>
        <item>dickless</item>
        <item>suck your dick</item>
        <item>suck my dick</item>
        <item>pussy</item>
        <item>god damn</item>
        <item>bitch</item>
        <item>son of a bitch</item>
        <item>ass burger</item>>
        <item>gay</item>
        <item>holy</item>
        <item>junk</item>
        <item>loser</item>
        <item>liar</item>
        <item>motherfucker</item>
        <item>mf</item>
        <item>muff</item>
        <item>nerd</item>
        <item>numb</item>
        <item>nut</item>
        <item>shithead</item>
        <item>shitstorm</item>>
        <item>시발놈</item>
        <item>씨발놈</item>
        <item>시벌놈</item>
        <item>씨벌놈</item>
        <item>시발련</item>
        <item>씨발련</item>
        <item>시벌련</item>
        <item>씨벌련</item>
        <item>시발년</item>
        <item>씨발년</item>
        <item>시벌년</item>
        <item>씨벌년</item>
        <item>시발새끼</item>
        <item>씨발새끼</item>
        <item>시벌새끼</item>
        <item>씨벌새끼</item>
        <item>개새끼</item>
        <item>쓰레기새끼</item>
        <item>인생망한새끼</item>
        <item>버러지새끼</item>
        <item>호로새끼</item>
        <item>호로자식</item>
        <item>미친놈</item>
        <item>미친련</item>
        <item>미친년</item>
        <item>미친새끼</item>
        <item>썩을놈</item>
        <item>썩을련</item>
        <item>썩을년</item>
        <item>씹병신</item>
        <item>씹장애인</item>
        <item>좆병신</item>
    </string-array>
    
</resources>