<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/title_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/addimage"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/chat_info_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_image">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/dalseohealingbold"
                android:text="@string/name_input"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/chatting_room_edit_text"
                android:layout_width="230dp"
                android:layout_height="60dp"
                android:background="@color/white"
                android:fontFamily="@font/dalseohealingbold"
                android:hint="@string/chatroom_name"
                android:maxLines="1"
                android:textSize="22sp"
                tools:ignore="Autofill,TextFields" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/create_chatting_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/greenyellow"
                android:fontFamily="@font/dalseohealingbold"
                android:text="@string/produce" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/greenyellow"
                android:fontFamily="@font/dalseohealingbold"
                android:text="@string/cancellation" />
        </LinearLayout>
    </LinearLayout>
</layout>