<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/messageItem_linearlayout_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/messageItem_layout_destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/messageItem_imageview_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/messageItem_textview_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dalseohealingbold"
                android:text="@string/name_kor"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/messageItem_textView_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/dalseohealingbold"
                android:text="@string/message"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/messageItem_textView_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dalseohealingbold"
                android:text="@string/time"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>