<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_background">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="25dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_jaschates"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="228dp"
                android:src="@drawable/email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/et_registration_id_layout"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_registration_id_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="50dp"
                app:layout_constraintBottom_toTopOf="@+id/et_registration_password_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registration_iv">

                <EditText
                    android:id="@+id/et_registration_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/dalseohealingbold"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="#000000"
                    android:textColorHint="#888888"
                    android:textSize="24sp"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/registration_iv"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/addimage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="172dp"
                android:src="@drawable/password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/et_registration_password_layout"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_registration_password_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                app:layout_constraintBottom_toTopOf="@+id/et_registration_name_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_registration_id_layout"
                app:passwordToggleDrawable="@drawable/text_visible_icon"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@null">

                <EditText
                    android:id="@+id/et_registration_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/dalseohealingbold"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textColorHint="#888888"
                    android:textSize="24sp"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_registration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/dalseohealingbold"
                android:text="@string/sign_up"
                android:textColor="#000000"
                app:backgroundTint="@color/yellow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_registration_name_layout" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="115dp"
                android:src="@drawable/name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/et_registration_name_layout"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_registration_name_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_registration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_registration_password_layout">

                <EditText
                    android:id="@+id/et_registration_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/dalseohealingbold"
                    android:hint="@string/name"
                    android:textColor="#000000"
                    android:textColorHint="#888888"
                    android:textSize="24sp"
                    tools:ignore="Autofill,TextFields" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>